tests/baselines/reference/mergeSymbolReexportedTypeAliasInstantiation.errors.txt
a.d.ts(3,8): error TS2300: Duplicate identifier 'Row2'.
index.d.ts(1,14): error TS2300: Duplicate identifier 'Row2'.


==== main.ts (0 errors) ====
    import {Row2, C} from '.'
    const x: ((rowData: Row2<string>) => unknown) = (rowData: Row2<any>) => (null)
    const y : C = { s: '' }
    
==== ./a.d.ts (1 errors) ====
    import '.'
    declare module '.' {
      type Row2<T> = {}
           ~~~~
!!! error TS2300: Duplicate identifier 'Row2'.
!!! related TS6203 index.d.ts:1:14: 'Row2' was also declared here.
      type C = { s : string }
    }
    
==== ./index.d.ts (1 errors) ====
    export type {Row2} from './common';
                 ~~~~
!!! error TS2300: Duplicate identifier 'Row2'.
!!! related TS6203 a.d.ts:3:8: 'Row2' was also declared here.
    
==== ./common.d.ts (0 errors) ====
    export interface Row2 {}